--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/http-kernel": "^4.0 || ^5.0",
         "symfony/config": "~4|~5",
         "guzzlehttp/guzzle": "~6|~7",
-        "twig/twig": "~1 | ~2 "
+        "twig/twig": "~1 | ~2 ",
+        "doctrine/cache": "^1"
     }
 }
