--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,14 @@
     },
     "require": {
         "php": ">=7.1",
+        "psr/cache": "^1.0",
+        "psr/simple-cache": "^1.0",
         "symfony/dependency-injection": "^4.0 || ^5.0",
         "symfony/http-kernel": "^4.0 || ^5.0",
         "symfony/config": "~4|~5",
         "guzzlehttp/guzzle": "~6|~7",
         "twig/twig": "~1 | ~2 ",
-        "doctrine/cache": "^1"
+        "doctrine/cache": "^1",
+        "symfony/filesystem": "~4|~5"
     }
 }
