--- a/composer.json
+++ b/composer.json
@@ -27,16 +27,17 @@
         "php": ">=7.1",
         "psr/cache": "^1.0",
         "psr/simple-cache": "^1.0",
-        "symfony/dependency-injection": "^4.0 || ^5.0",
-        "symfony/http-kernel": "^4.0 || ^5.0",
+        "symfony/dependency-injection": "^4.4 || ^5.0",
+        "symfony/http-kernel": "^4.4 || ^5.0",
         "symfony/config": "~4|~5",
         "guzzlehttp/guzzle": "~6|~7",
-        "twig/twig": "~1 | ~2 ",
+        "twig/twig": "~2 | ~3",
         "doctrine/cache": "^1",
         "symfony/filesystem": "~4|~5"
     },
     "require-dev": {
-        "proklung/phpunit-testing-tools": "^1.3.0"
+        "proklung/phpunit-testing-tools": "^1.3.0",
+        "icanhazstring/composer-unused": "^0.7.5"
     }
 
 }
