--- a/composer.json
+++ b/composer.json
@@ -1,43 +1,44 @@
 {
-    "name": "proklung/symfony-guzzle-bundle",
-    "description": "Symfony bundle for work with Guzzle.",
-    "type": "symfony-bundle",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Gavrilov Fedy",
-            "email": "fedor.gavrilov.75@mail.ru",
-            "homepage": "https://github.com/ProklUng"
-        }
-    ],
-    "support": {
-        "issues": "https://github.com/ProklUng/symfony.guzzle.bundle/issues",
-        "source": "https://github.com/ProklUng/symfony.guzzle.bundle"
-    },
-    "autoload": {
-        "psr-4": {
-            "Prokl\\GuzzleBundle\\": "",
-            "Prokl\\GuzzleBundle\\Tests\\": "Tests"
-        },
-        "exclude-from-classmap": [
-            "Tests/"
-        ]
-    },
-    "require": {
-        "php": ">=7.1",
-        "psr/cache": "^1.0",
-        "psr/simple-cache": "^1.0",
-        "symfony/dependency-injection": "^4.4 || ^5.0",
-        "symfony/http-kernel": "^4.4 || ^5.0",
-        "symfony/config": "~4|~5",
-        "guzzlehttp/guzzle": "~6|~7",
-        "twig/twig": "~2 | ~3",
-        "doctrine/cache": "^1",
-        "symfony/filesystem": "~4|~5"
-    },
-    "require-dev": {
-        "proklung/phpunit-testing-tools": "^1.3.0",
-        "icanhazstring/composer-unused": "^0.7.5"
+  "name": "proklung/symfony-guzzle-bundle",
+  "description": "Symfony bundle for work with Guzzle.",
+  "type": "symfony-bundle",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Gavrilov Fedy",
+      "email": "fedor.gavrilov.75@mail.ru",
+      "homepage": "https://github.com/ProklUng"
     }
-
+  ],
+  "support": {
+    "issues": "https://github.com/ProklUng/symfony.guzzle.bundle/issues",
+    "source": "https://github.com/ProklUng/symfony.guzzle.bundle"
+  },
+  "autoload": {
+    "psr-4": {
+      "Prokl\\GuzzleBundle\\": "",
+      "Prokl\\GuzzleBundle\\Tests\\": "Tests"
+    },
+    "exclude-from-classmap": [
+      "Tests/"
+    ]
+  },
+  "require": {
+    "php": ">=7.1 || ^8.0",
+    "psr/cache": "^1.0",
+    "psr/simple-cache": "^1.0",
+    "symfony/dependency-injection": "^4.4 || ^5.0",
+    "symfony/http-kernel": "^4.4 || ^5.0",
+    "symfony/config": "^4.4 || ^5.0",
+    "symfony/filesystem": "^4.4 || ^5.0",
+    "guzzlehttp/guzzle": "~6|~7",
+    "twig/twig": "~2 | ~3",
+    "doctrine/cache": "^1",
+    "ext-json": "*",
+    "ext-dom": "*"
+  },
+  "require-dev": {
+    "proklung/phpunit-testing-tools": "^1.4.0",
+    "icanhazstring/composer-unused": "^0.7.5"
+  }
 }
